--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,10 +100,18 @@ add_executable(task-client
     ${SRC_DIR}/task-client.cpp
 )
 
+#add_executable(task-unit
+#    ${SRC_DIR}/logging.cpp
+#    ${SRC_DIR}/service.cpp
+#    ${SRC_DIR}/cli.cpp
+#    ${SRC_DIR}/taskdb.cpp
+#)
+
 add_executable(integration ${SRC_DIR}/integration.cpp)
 
 # Specify the precompiled header
-# target_precompile_headers(data-logger PRIVATE include/precompiled.hpp)
+target_precompile_headers(task-service PRIVATE include/precompiled.hpp)
+target_precompile_headers(task-client PRIVATE include/precompiled.hpp)
 
 # turn off optimization to speed compile times
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
@@ -114,11 +122,13 @@ endif()
 
 target_compile_options(task-client PRIVATE ${OPTIM_COMPILE_FLAGS})
 target_compile_options(task-service PRIVATE ${OPTIM_COMPILE_FLAGS})
+# target_compile_options(task-unit PRIVATE ${OPTIM_COMPILE_FLAGS})
 target_compile_options(integration PRIVATE ${OPTIM_COMPILE_FLAGS})
 
 # Link libraries to executables
 target_link_libraries(task-service PRIVATE ${DEPENDENT_LIBRARIES})
 target_link_libraries(task-client PRIVATE ${DEPENDENT_LIBRARIES})
+# target_link_libraries(task-unit PRIVATE ${DEPENDENT_LIBRARIES})
 target_link_libraries(integration PRIVATE ${DEPENDENT_LIBRARIES})
 
 # Installation rules
